[package]
name = "json-patch-ext"
authors = ["Applied Computing Research Labs"]
version = "0.2.1"
edition = "2021"
description = "Unofficial extensions and helpers for json_patch"
license = "MIT"
readme = "README.md"

[dependencies]
json-patch = "3"
jsonptr = "0.6.3"
serde_json = "1"
thiserror = "1"

[dev-dependencies]
assertables = "9.3.0"
rstest = "0.23.0"
