[package]
name = "json-patch-ext"
authors = ["Applied Computing Research Labs"]
version = "0.3.2"
edition = "2024"
description = "Unofficial extensions and helpers for json_patch"
license = "MIT"
readme = "README.md"

[dependencies]
json-patch = "4"
jsonptr = "0.7.1"
serde_json = "1"
thiserror = "2"

[dev-dependencies]
assertables = "9.3.0"
rstest = "0.23.0"
